--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "start": "node .",
     "test": "true"
   },
-  "devDependencies": {
+  "dependencies": {
     "discord.js": "^11.4.2",
     "fs": "^0.0.1-security",
     "opusscript": "^0.0.6",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
