--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "discord.js": "^11.4.2",
     "fs": "^0.0.1-security",
     "opusscript": "^0.0.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ytdl-core": "^0.28.0"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
