--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs": "^0.0.1-security",
     "opusscript": "^0.0.6",
     "path": "^0.12.7",
+    "yargs": "^12.0.5",
     "ytdl-core": "^0.28.0"
   },
   "devDependencies": {
