--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "discord-podcast",
-  "version": "1.1.0",
+  "name": "broadcast-bot",
+  "version": "1.2.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
