--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "ytdl-core": "^0.28.0"
   },
   "devDependencies": {
+    "@types/node": "^10.12.18",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "typescript": "^3.2.2"
   }
 }
