--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "broadcast-bot",
   "version": "1.2.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
     "start": "node .",
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "discord.js": "^11.4.2",
-    "fs": "^0.0.1-security",
     "opusscript": "^0.0.6",
-    "path": "^0.12.7",
+    "url": "^0.11.0",
     "yargs": "^12.0.5",
+    "youtube-playlist": "^1.0.2",
     "ytdl-core": "^0.28.0"
   },
   "devDependencies": {
     "@types/node": "^10.12.18",
+    "@types/yargs": "^12.0.4",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
