--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "broadcast-bot",
   "version": "2.0.0",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "license": "MIT",
+  "engines": {
+    "node": "8.11.4"
+  },
   "scripts": {
-    "start": "node .",
-    "test": "eslint *.js"
+    "build-ts": "tsc",
+    "postinstall": "npm run build-ts",
+    "start": "node run serve",
+    "serve": "node dist/index.js",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc -w"
   },
   "dependencies": {
     "discord.js": "^11.4.2",
@@ -24,6 +31,7 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "^1.18.9",
     "typescript": "^3.2.2"
   }
 }
