--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "engines": {
-    "node": "8.11.4"
+    "node": "^10.0.0"
   },
   "scripts": {
     "build-ts": "tsc",
